@@ -1,3 +1,11 @@
+2014-06-23  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* encodings.c: Do not compile close_iconv() when not used.
+	* translations.h: Do not #include "c-auto.h".
+	* xdvi.h: Do not #include "c-auto.h" and "kpathsea/c-auto.h".
+
+	* m4/xdvi-xinput-2-1.m4: Test link instead of compile step.
+
 2014-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* ft.c, gui/xaw_menu.c, hypertex.c: Avoid undefined behaviour
